syntax = "proto3";
import "ErrorResult.proto";

option csharp_namespace = "UserCenter.GrpcServices";

package UserGrpc;

service UserGrpcService{
	rpc GetById(UserIdRequest) returns (UserResponse);
	rpc GetUsers(UserIdsRequest) returns (UsersResponse);
}

message UserIdRequest{
	string UserId=1;
}

message UserIdsRequest{
	repeated string UserIds=1;
}

message UserResponse{
	string UserId=1;
	string Username=2;
}

message UsersResponse{
	repeated UserResponse Users=1;
}
